# alive

./: .env.example  COMPARISON.md  README.md  alive.py  pyproject.toml  test_alive.py
.github/workflows/: ci.yml.disabled
